2005-01-27  Hans-Peter Nilsson  <hp@axis.com>

	* testsuite/include/check.h: Include stdlib.h.

2005-01-27  Hans-Peter Nilsson  <hp@axis.com>

	* Makefile.am (stmp-targ-include): Support include header files
	from machine directories.
	(install-data-local): Ditto.
	* Makefile.in: Regenerate.

2005-01-24  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/string.h: Remove Linux-specific declaration of
	strsignal and add #include <sys/string.h>.
	* libc/include/sys/string.h: New file.
	* libc/include/sys/linux/sys/string.h: New file with strsignal
	declaration deleted above.

2005-01-20  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/time/strftime.c (strftime): Change %r and %x to be compliant
	to POSIX standard for "C" locale.  Allow %E and %O modifiers
	to be ignored as long as they precede valid specifiers according
	to POSIX.

2005-01-19  Shaun Jackman  <sjackman@gmail.com>

	* libc/stdlib/setenv_r.c (_setenv_r): Call tzset() if the TZ
	environment variable is set.

2005-01-19  Shaun Jackman  <sjackman@gmail.com>

        * tzset_r.c (_tzname): Add a comma.

2005-01-18  Aldy Hernandez  <aldyh@redhat.com>

	* libc/machine/powerpc/vfprintf.c: Use _REENT when calling
	_VFPRINTF_R.

2005-01-07  Paul Brook  <paul@codesourcery.com>
                                                                                
	* configure.in: Add test for .init_array.
	* configure: Regenerate.
	* newlib.hin: Add HAVE_INITFINI_ARRAY.
	* libc/misc/Makefile.am: Add init.c
	* libc/misc/Makefile.in: Regenerate.
	* libc/misc/init.c: New file.
	* libc/sys/arm/crt0.S: Call __libc_{init,fini}_array instead of
	_init/_fini if they exist.
                                                                                
2005-01-06  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdlib/strtod.c (_strtod_r): Add NaN support.
	* (strtof): Ditto.
	* libc/stdio/vfscanf.c (__svfscanf_r): Ditto.
	* Makefile.am (MATHOBJS_IN_LIBC): Add s_nan and sf_nan
	functions for use by strtod and strtof.